--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/tv"
+        android:label="TV Show Watch Tracker"
+        android:roundIcon="@drawable/tv"
         android:supportsRtl="true"
         android:theme="@style/Theme.MOVIETV">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".AddMovie"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".splash">
             <intent-filter>
