--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MOVIETV">
         <activity android:name=".MovieTabs"></activity>
-        <activity android:name=".MyList" />
-        <activity android:name=".AddMovie" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".auth.AuthActivity" />
         <activity android:name=".splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
