--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 .DS_Store
 /build
 /captures
+/app/src/main/java/com/example/movie_tv/data/ApiTMDB.kt
 .externalNativeBuild
 .cxx
 local.properties
